[gd_scene load_steps=11 format=2]

[ext_resource path="res://Enemies/Boss1/Boss1.pxo" type="Texture" id=1]
[ext_resource path="res://Enemies/Boss1/Boss1.gd" type="Script" id=2]
[ext_resource path="res://Projectiles/BigProjectile.tscn" type="PackedScene" id=3]
[ext_resource path="res://FlashShader.shader" type="Shader" id=4]
[ext_resource path="res://Enemies/MobileCanon.tscn" type="PackedScene" id=5]
[ext_resource path="res://Blindage.tscn" type="PackedScene" id=7]
[ext_resource path="res://Enemies/Boss1/Front Blindage.pxo" type="Texture" id=8]
[ext_resource path="res://flash.tres" type="Animation" id=9]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[node name="Boss1" type="KinematicBody2D"]
collision_layer = 32
script = ExtResource( 2 )
projectile_path = ExtResource( 3 )
hp = 80

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
texture = ExtResource( 1 )

[node name="MobileCanon" parent="." instance=ExtResource( 5 )]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -28.9346, 0.289635, -21.6818, 1.97143, -17.5825, 5.44012, -15.7955, 9.11905, -9.69905, 9.43438, -5.17923, 13.8491, 5.12175, 13.8491, 9.64157, 9.43438, 15.8432, 9.43438, 17.3981, 5.11326, 20.6783, 1.7612, 27.9311, -0.0257034, 28.1413, -14.1107, -28.6192, -13.9005 )

[node name="MoveTween" type="Tween" parent="."]

[node name="Canons" type="Node2D" parent="."]

[node name="LeftCanon" type="Position2D" parent="Canons"]
position = Vector2( -26, 7 )

[node name="RightCanon" type="Position2D" parent="Canons"]
position = Vector2( 26, 7 )

[node name="LeftWaveCanon" type="Position2D" parent="Canons"]
position = Vector2( -13.5, 14 )

[node name="RightWaveCanon" type="Position2D" parent="Canons"]
position = Vector2( 13.5, 14 )

[node name="FrontBlindage" parent="." instance=ExtResource( 7 )]
hp = 150

[node name="Sprite" parent="FrontBlindage" index="0"]
material = SubResource( 3 )
texture = ExtResource( 8 )

[node name="CollisionPolygon2D" parent="FrontBlindage" index="1"]
polygon = PoolVector2Array( -11.8789, 9.60326, -11.8789, 12.3099, -9.09341, 12.2836, -5.7561, 16.3304, 5.8325, 16.3567, 9.3012, 12.2836, 11.8239, 12.2836, 11.8502, 9.65582, 9.24865, 9.70837, 5.56973, 13.7815, -5.46704, 13.8077, -9.43502, 9.7872 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/flash = ExtResource( 9 )

[node name="ShootTimer" type="Timer" parent="."]

[node name="ShootWaveTimer" type="Timer" parent="."]
wait_time = 1.2
[connection signal="tween_completed" from="MoveTween" to="." method="_on_MoveTween_tween_completed"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="ShootWaveTimer" to="." method="_on_ShootWaveTimer_timeout"]

[editable path="FrontBlindage"]
